final responsive changes | fixed bug where innovation didnt align to bottom

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -62,7 +62,7 @@ nav.mobile__nav {
   font-size: 16px; }
 
 /*MOBILE NAVIGATION*/
-@media only screen and (max-width:1200px ) {
+@media only screen and (max-width:1350px ) {
   nav.header__nav {
     display: none;
     visibility: hidden;
@@ -146,11 +146,21 @@ nav.mobile__nav {
     padding: 10px 0;
     font-size: 22px; }
   #menuToggle input:checked ~ ul {
-    transform: translate(-99%,0); } 
+    transform: translate(-98%,0); } 
 }
+
+@media only screen and (max-width:1024px) {
+  #menuToggle input:checked ~ ul {
+    transform: translate(-95%,0); }
+}
+
 @media only screen and (max-width:600px) {
   #menu {
-    width: 100vw; }
+    width: 102vw; }
+  #menuToggle {
+    right: 20px; }
+  #menuToggle input:checked ~ ul {
+    transform: translate(-98%,0); }
 }
 
 /*FOOTER*/
