--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,7 +1,21 @@
+@media only screen and (min-height: 850px) {
+  .innovation .innovation__phone .innovation__img--container {
+    height: 90vh; }
+}
+
+@media only screen and (max-width: 1650px) {
+  .message__identity,
+  .message__identity[class*="span"],
+  .message__copy,
+  .message__copy[class*="span"] {
+    width: 75%; }
+}
+
+@media only screen and (max-width: 1500px) {
+  
+}
+
 @media only screen and (max-width: 1450px) {
-  .numbers .numbers__select .row-depth-1 {
-    flex: 1 0 21%;
-    padding-bottom: 3rem; }
   .rewarding .rewarding__graph div {
     width: 8%;
     min-width: unset;
@@ -9,9 +23,15 @@
     margin-left: 2%; }
 }
 
+@media only screen and (max-width:1350px) {
+  .numbers .numbers__select .row-depth-1 {
+    flex: 1 0 21%;
+    padding-bottom: 2rem; }
+}
+
 @media only screen and (max-width:1300px) {
   .message__body, .message__body[class*="body"] {
-        width: 62.5%;
+    width: 62.5%;
     padding: 0;
     margin: 0;
     background: 0;
@@ -77,9 +97,6 @@
     display: none; }
   .testimonials .bamboo {
     height: 75vh; }
-  /*.life .bamboo.fade>.slides>* {
-    min-height: 90vh;
-    max-height: 90vh; }*/
   .life .life__slide--copy {
     position: relative;
     width: 60%;
@@ -198,8 +215,6 @@
     padding-bottom: 0; }
   .life .slideshow {
     height: 55vh; }
-  /*.life .bamboo .fit-img {
-    margin-top: -17%; }*/
   .life .life__slide--copy {
     width: 100%; }
   .life .bamboo-navigation {
@@ -251,19 +266,21 @@
 }
 
 @media only screen and (max-width: 600px) {
-  #menu {
-    width: 102vw; }
-  #menuToggle {
-    right: 30px; }
-  #menuToggle input:checked ~ ul {
-    transform: translate(-96%,0); }
   .main__subtitle, .main__subtitle[class*="span"], .main__subtitle[class*="span"]:first-child {
     max-width: 90%; }
   .hero .hero__sub, .hero .hero__sub[class*="span"] {
     width: 90%;
     margin: 0 auto; }
+  .numbers__subcopy,
+  .numbers__subcopy[class*="span"],
+  .numbers__subcopy[class*="span"]:first-child {
+    width: 90%;
+    font-size: 18px;
+    margin: 0 auto; }
+  .numbers__selected--item h4 {
+    font-family: var(--rt--semi); }
   .numbers__selected--item h4, .numbers__selected--item h4[class*="span"] {
-    font-size: 20px; }
+    font-size: 18px; }
   #fuelingFg {
     width: 90%; }
   .mental .mental__parallax:nth-child(1) {
@@ -315,6 +332,8 @@
   .life, 
   .life[class*="span"] {
     height: 100%; }
+   .life .bamboo .fit-img {
+    height: 100%; }
   .stand__copy, 
   .stand .stand__copy {
     width: 90%; }
@@ -330,24 +349,19 @@
   .life .slideshow {
     height: 110vh; }
   .message__identity h4 {
-    font-size: 24px; }
+    font-family: var(--rt--semi);
+    font-size: 25px; }
   .message__identity h6 {
     font-size: 18px; }
 }
 
-/* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-/* Styles */
+@media only screen and (max-width: 400px) {
+  #securityTelecom .break {
+    display: block; }
 }
 
-/* Smartphones (landscape) ----------- */
-@media only screen and (min-width : 321px) {
-/* Styles */
-}
-
-/* Smartphones (portrait) ----------- */
-@media only screen and (max-width : 320px) {
-/* Styles */
+@media only screen and (max-width: 320px) {
+  #mentalHealth span.break { display: block; }
 }
 
 /* iPad Pro */
@@ -366,8 +380,6 @@
     height: 45vh; }
   .security .security__foreground {
     display: none; }
-  .innovation, .innovation[class*="span"] {
-    height: 645vh; }
   .innovation .innovation__point--item.active {
     padding: 5% 0 0 0; }
   .innovation .innovation__focus {
@@ -379,14 +391,10 @@
     z-index: 999; }
   .testimonials .bamboo {
     height: 45vh; }
-  .life, .life[class*="span"] {
-    height: 65vh; }
   .life .slideshow {
     height: 40vh; }
-  .life .bamboo .fit-img {
-    top: -15%; }
   .life .bamboo-navigation {
-    bottom: 0%; }
+    bottom: 5%; }
   .stand__focus {
     height: 50vh; }
   .footer img {
@@ -395,22 +403,22 @@
 @media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
   .hero {
     height: 85vh; }
-  .innovation, .innovation[class*="span"] {
-    height: 685vh; }
+  .hero .hero__sub, .hero .hero__sub[class*="span"] {
+    width: 60%; }
   .innovation .innovation__focus {
+    height: 100vh !important;
     margin-top: unset !important; }
   .innovation .innovation__phone .innovation__img--container {
-    height: 55vh; }
+    height: 65vh; }
   .innovation .innovation__img, .innovation .innovation__img[class*="span"], .innovation .innovation__img[class*="span"]:first-child {
     position: absolute;
-    bottom: -215%;
-    height: unset; }
+    bottom: 0; }
   .innovation .innovation__copy.copy__left, .innovation .innovation__copy.copy__left[class*="span"] {
-    width: 75%;
+    width: 90%;
     float: none;
     padding: 0; }
-  .life .bamboo-navigation {
-    bottom: -10%;}
+  .osx .life .bamboo .fit-img {
+    min-height: 50vh; }
   .stand__focus {
     height: 100vh; }
   .footer img {
@@ -419,8 +427,6 @@
 @media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
   .hero {
     height: 105vh; }
-  .innovation, .innovation[class*="span"] {
-    height: 680vh; }
   .innovation .innovation__focus {
     margin-top: unset !important; }
   .innovation .innovation__phone .innovation__img--container {
@@ -428,10 +434,8 @@
   #innovation6Screen { width: auto; }
   .testimonials .bamboo {
     height: 50vh; }
-  .life, .life[class*="span"] {
-    height: 80vh; }
-  .life .slideshow {
-    height: 50vh; }
+  .osx .life .bamboo .fit-img {
+    min-height: 70vh; }
   .stand__focus {
     height: 100vh; }
   .footer img {
@@ -442,14 +446,12 @@
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
   .hero {
     height: 105vh; }
-  .innovation, .innovation[class*="span"] {
-    height: 700vh; }
+  .hero .hero__sub, .hero .hero__sub[class*="span"] {
+    width: 65%; }
   .innovation .innovation__focus {
     margin: 0 !important; }
   .testimonials .bamboo {
     height: 80vh; }
-  .life, .life[class*="span"] {
-    height: 110vh; }
   .life .slideshow {
     height: 65vh; }
   .stand__focus {
@@ -520,6 +522,12 @@ iPad 3
 
 @media only screen and (min-device-width: 414px) and (max-device-height: 736px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2){
 /* Styles */
+}
+
+/*iPhone 8 */
+@media only screen and (device-width : 375px) and (device-height : 667px) and (-webkit-device-pixel-ratio : 2) {
+  .life .bamboo .fit-img {
+    min-height: 110vh; }
 }
 
 /* iPhone X ----------- */
